finish api-docs for modifying user profile
